# toyDNS

./: .gitignore  CMakeLists.txt  README.md
matlab/: Eulereigensys.mlx  make_plots.mlx
src/: CMakeLists.txt  KokkosTypedefs.h  Utilities.h  main.cpp
src/cores/: IdealGas.h  Mesh.h  Solver.h  State.h
src/cores/concepts/: InitializerConcept.h  MeshConcept.h  StateConcept.h  VisualizerConcept.h
src/examples/: Explosion.h  ShockTube.h
src/works/: Advection.h  Boundary.h  H5Visualizer.h  Initializer.h  TimeIntegrator.h
